10/Compiler/JackParser.py
# Generated from Jack.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class JackParser ( Parser ):

    grammarFileName = "Jack.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'static'", "'field'", 
                     "','", "';'", "'int'", "'char'", "'boolean'", "'constructor'", 
                     "'function'", "'method'", "'void'", "'('", "')'", "'var'", 
                     "'let'", "'['", "']'", "'='", "'if'", "'else'", "'while'", 
                     "'do'", "'return'", "'.'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'<'", "'>'", "'~'", "'true'", "'false'", 
                     "'null'", "'this'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGERCONSTANT", "STRINGCONSTANT", 
                      "IDENTIFIER", "BLOCKCOMMENT", "COMMENT", "WHITESPACE", 
                      "JUMPLINE" ]

    RULE_classJack = 0
    RULE_classVarDec = 1
    RULE_jacktype = 2
    RULE_subroutineDec = 3
    RULE_parameterList = 4
    RULE_subroutineBody = 5
    RULE_varDec = 6
    RULE_className = 7
    RULE_subroutineName = 8
    RULE_varName = 9
    RULE_statements = 10
    RULE_statement = 11
    RULE_letStatement = 12
    RULE_ifStatement = 13
    RULE_whileStatement = 14
    RULE_doStatement = 15
    RULE_returnStatement = 16
    RULE_expression = 17
    RULE_term = 18
    RULE_subroutineCall = 19
    RULE_expressionList = 20
    RULE_op = 21
    RULE_unaryOp = 22
    RULE_keywordConstant = 23

    ruleNames =  [ "classJack", "classVarDec", "jacktype", "subroutineDec", 
                   "parameterList", "subroutineBody", "varDec", "className", 
                   "subroutineName", "varName", "statements", "statement", 
                   "letStatement", "ifStatement", "whileStatement", "doStatement", 
                   "returnStatement", "expression", "term", "subroutineCall", 
                   "expressionList", "op", "unaryOp", "keywordConstant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    INTEGERCONSTANT=41
    STRINGCONSTANT=42
    IDENTIFIER=43
    BLOCKCOMMENT=44
    COMMENT=45
    WHITESPACE=46
    JUMPLINE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None
        self.xml_tokens = ""
        self.xml_analyzer = ""



    class ClassJackContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(JackParser.ClassNameContext,0)


        def classVarDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.ClassVarDecContext)
            else:
                return self.getTypedRuleContext(JackParser.ClassVarDecContext,i)


        def subroutineDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.SubroutineDecContext)
            else:
                return self.getTypedRuleContext(JackParser.SubroutineDecContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_classJack

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassJack" ):
                listener.enterClassJack(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassJack" ):
                listener.exitClassJack(self)




    def classJack(self):

        localctx = JackParser.ClassJackContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_classJack)
        self._la = 0 # Token type
        try:
            self.xml_analyzer += "<class>"
            self.xml_tokens += "<tokens>" 

            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(JackParser.T__0)      

            self.xml_analyzer += "<keyword> class </keyword>"
            self.xml_tokens   += "<keyword> class </keyword>"       
            
            self.state = 49
            self.className()
            self.state = 50
            self.match(JackParser.T__1)

            self.xml_analyzer += "<symbol> { </symbol>"
            self.xml_tokens   += "<symbol> { </symbol>"       
                      
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.T__3 or _la==JackParser.T__4:
                self.state = 51                
                self.classVarDec()                
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
       

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.T__10) | (1 << JackParser.T__11) | (1 << JackParser.T__12))) != 0):
                self.state = 57                
                self.subroutineDec()                
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(JackParser.T__2)

            self.xml_analyzer += "<symbol> } </symbol>"
            self.xml_tokens   += "<symbol> } </symbol>"

            self.xml_analyzer += "</class>"
            self.xml_tokens += "</tokens>" 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassVarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jacktype(self):
            return self.getTypedRuleContext(JackParser.JacktypeContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_classVarDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassVarDec" ):
                listener.enterClassVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassVarDec" ):
                listener.exitClassVarDec(self)




    def classVarDec(self):

        localctx = JackParser.ClassVarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classVarDec)
        self._la = 0 # Token type
        try:
            self.xml_analyzer += "<classVarDec>"

            self.enterOuterAlt(localctx, 1)
            self.state = 65
            _la = self._input.LA(1)
            if not(_la==JackParser.T__3 or _la==JackParser.T__4):
                self._errHandler.recoverInline(self)                
            else:
                self._errHandler.reportMatch(self)
                self.consume()

            valor = self.literalNames[_la]
            self.xml_analyzer += "<keyword> {} </keyword>".format(valor)            
            self.xml_tokens   += "<keyword> {} </keyword>".format(valor)
                
                
            self.state = 66
            self.jacktype()
            self.state = 67
            self.varName()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.T__5:
                self.state = 68
                self.match(JackParser.T__5)
                self.xml_analyzer += "<symbol> , </symbol>"
                self.xml_tokens   += "<symbol> , </symbol>"

                self.state = 69
                self.varName()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(JackParser.T__6)
            self.xml_analyzer += "<symbol> , </symbol>"
            self.xml_tokens   += "<symbol> , </symbol>"

            self.xml_analyzer += "</classVarDec>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class JacktypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(JackParser.ClassNameContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_jacktype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJacktype" ):
                listener.enterJacktype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJacktype" ):
                listener.exitJacktype(self)




    def jacktype(self):

        localctx = JackParser.JacktypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_jacktype)
        try:

            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            
            if token in [JackParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.match(JackParser.T__7)
                
                self.xml_analyzer += "<keyword> int </keyword>"
                self.xml_tokens   += "<keyword> int </keyword>" 
                pass
            elif token in [JackParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(JackParser.T__8)
                
                self.xml_analyzer += "<keyword> char </keyword>"
                self.xml_tokens   += "<keyword> char </keyword>" 

                pass
            elif token in [JackParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(JackParser.T__9)

                self.xml_analyzer += "<keyword> boolean </keyword>"
                self.xml_tokens   += "<keyword> boolean </keyword>" 
                pass
            elif token in [JackParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.className()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubroutineDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineName(self):
            return self.getTypedRuleContext(JackParser.SubroutineNameContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(JackParser.ParameterListContext,0)


        def subroutineBody(self):
            return self.getTypedRuleContext(JackParser.SubroutineBodyContext,0)


        def jacktype(self):
            return self.getTypedRuleContext(JackParser.JacktypeContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_subroutineDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineDec" ):
                listener.enterSubroutineDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineDec" ):
                listener.exitSubroutineDec(self)




    def subroutineDec(self):

        localctx = JackParser.SubroutineDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_subroutineDec)
        self._la = 0 # Token type
        try:
            self.xml_analyzer += "<subroutineDec>"

            self.enterOuterAlt(localctx, 1)
            self.state = 83
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.T__10) | (1 << JackParser.T__11) | (1 << JackParser.T__12))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()

            valor = self.literalNames[_la]
            self.xml_analyzer += "<keyword> {} </keyword>".format(valor[1:-1])
            self.xml_tokens   += "<keyword> {} </keyword>".format(valor[1:-1])

                
            self.state = 86
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JackParser.T__13]:
                self.state = 84
                self.match(JackParser.T__13)

                self.xml_analyzer += "<keyword> void </keyword>"
                self.xml_tokens   += "<keyword> void </keyword>"
                pass
            elif token in [JackParser.T__7, JackParser.T__8, JackParser.T__9, JackParser.IDENTIFIER]:
                self.state = 85
                self.jacktype()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 88
            self.subroutineName()
            self.state = 89
            self.match(JackParser.T__14)

            self.xml_analyzer += "<symbol> ( </symbol>"
            self.xml_tokens   += "<symbol> ( </symbol>"

            self.state = 90
            self.parameterList()
            self.state = 91
            self.match(JackParser.T__15)

            self.xml_analyzer += "<symbol> ) </symbol>"
            self.xml_tokens   += "<symbol> ) </symbol>"            

            self.state = 92
            self.subroutineBody()
            self.xml_analyzer += "</subroutineDec>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParameterListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jacktype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.JacktypeContext)
            else:
                return self.getTypedRuleContext(JackParser.JacktypeContext,i)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = JackParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.xml_analyzer += "<parameterList>"

            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.T__7) | (1 << JackParser.T__8) | (1 << JackParser.T__9) | (1 << JackParser.IDENTIFIER))) != 0):
                self.state = 94
                self.jacktype()
                self.state = 95
                self.varName()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==JackParser.T__5:
                    self.state = 97
                    self.match(JackParser.T__5)

                    self.xml_analyzer += "<symbol> , </symbol>"
                    self.xml_tokens   += "<symbol> , </symbol>"

                    self.state = 98
                    self.jacktype()
                    self.state = 99
                    self.varName()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.xml_analyzer += "</parameterList>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubroutineBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statements(self):
            return self.getTypedRuleContext(JackParser.StatementsContext,0)


        def varDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarDecContext)
            else:
                return self.getTypedRuleContext(JackParser.VarDecContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_subroutineBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineBody" ):
                listener.enterSubroutineBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineBody" ):
                listener.exitSubroutineBody(self)




    def subroutineBody(self):

        localctx = JackParser.SubroutineBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subroutineBody)
        self._la = 0 # Token type
        try:
            self.xml_analyzer += "<subroutineBody>"

            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(JackParser.T__1)

            self.xml_analyzer += "<symbol> { </symbol>"
            self.xml_tokens   += "<symbol> { </symbol>"

            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.T__16:
                self.state = 109
                self.varDec()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.statements()
            self.state = 116
            self.match(JackParser.T__2)

            self.xml_analyzer += "<symbol> } </symbol>"
            self.xml_tokens   += "<symbol> } </symbol>"

            self.xml_analyzer += "</subroutineBody>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def jacktype(self):
            return self.getTypedRuleContext(JackParser.JacktypeContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_varDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDec" ):
                listener.enterVarDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDec" ):
                listener.exitVarDec(self)




    def varDec(self):

        localctx = JackParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDec)
        self._la = 0 # Token type
        try:

            self.xml_analyzer += "<varDec>"

            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(JackParser.T__16)

            self.xml_analyzer += "<keyword> var </keyword>"
            self.xml_tokens   += "<keyword> var </keyword>"

            self.state = 119
            self.jacktype()
            self.state = 120
            self.varName()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JackParser.T__5:
                self.state = 121
                self.match(JackParser.T__5)

                self.xml_analyzer += "<symbol> , </symbol>"
                self.xml_tokens   += "<symbol> , </symbol>"

                self.state = 122
                self.varName()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(JackParser.T__6)

            self.xml_analyzer += "<symbol> ; </symbol>"
            self.xml_tokens   += "<symbol> ; </symbol>"

            self.xml_analyzer += "</varDec>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JackParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JackParser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)




    def className(self):

        localctx = JackParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            
            self.match(JackParser.IDENTIFIER)
            
            valor = localctx.IDENTIFIER()
            
            self.xml_analyzer += "<identifier> {} </identifier>".format(valor)
            self.xml_tokens   += "<identifier> {} </identifier>".format(valor)
            
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubroutineNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JackParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JackParser.RULE_subroutineName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineName" ):
                listener.enterSubroutineName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineName" ):
                listener.exitSubroutineName(self)




    def subroutineName(self):

        localctx = JackParser.SubroutineNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subroutineName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(JackParser.IDENTIFIER)

            valor = localctx.IDENTIFIER()
            self.xml_analyzer += "<identifier> {} </identifier>".format(valor)
            self.xml_tokens   += "<identifier> {} </identifier>".format(valor)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JackParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JackParser.RULE_varName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarName" ):
                listener.enterVarName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarName" ):
                listener.exitVarName(self)




    def varName(self):

        localctx = JackParser.VarNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(JackParser.IDENTIFIER)

            valor = localctx.IDENTIFIER()
            self.xml_analyzer += "<identifier> {} </identifier>".format(valor)
            self.xml_tokens   += "<identifier> {} </identifier>".format(valor)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.StatementContext)
            else:
                return self.getTypedRuleContext(JackParser.StatementContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = JackParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.xml_analyzer += "<statements>"

            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JackParser.T__17) | (1 << JackParser.T__21) | (1 << JackParser.T__23) | (1 << JackParser.T__24) | (1 << JackParser.T__25))) != 0):
                self.state = 136
                self.statement()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.xml_analyzer += "</statements>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatement(self):
            return self.getTypedRuleContext(JackParser.LetStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(JackParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(JackParser.WhileStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(JackParser.DoStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(JackParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = JackParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 147
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JackParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.letStatement()
                pass
            elif token in [JackParser.T__21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.ifStatement()
                pass
            elif token in [JackParser.T__23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.whileStatement()
                pass
            elif token in [JackParser.T__24]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.doStatement()
                pass
            elif token in [JackParser.T__25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LetStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varName(self):
            return self.getTypedRuleContext(JackParser.VarNameContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JackParser.ExpressionContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_letStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)




    def letStatement(self):

        localctx = JackParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_letStatement)
        self._la = 0 # Token type
        try:

            self.xml_analyzer += "<letStatement>"

            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(JackParser.T__17)

            self.xml_analyzer += "<keyword> let </keyword>"
            self.xml_tokens   += "<keyword> let </keyword>"

            self.state = 150
            self.varName()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JackParser.T__18:
                self.state = 151
                self.match(JackParser.T__18)

                self.xml_analyzer += "<symbol> [ </symbol>"
                self.xml_tokens   += "<symbol> [ </symbol>"

                self.state = 152
                self.expression()
                self.state = 153
                self.match(JackParser.T__19)

                self.xml_analyzer += "<symbol> ] </symbol>"
                self.xml_tokens   += "<symbol> ] </symbol>"


            self.state = 157
            self.match(JackParser.T__20)

            self.xml_analyzer += "<symbol> = </symbol>"
            self.xml_tokens   += "<symbol> = </symbol>"

            self.state = 158
            self.expression()
            self.state = 159
            self.match(JackParser.T__6)

            self.xml_analyzer += "<symbol> ; </symbol>"
            self.xml_tokens   += "<symbol> ; </symbol>"

            self.xml_analyzer += "</letStatement>"
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IfStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(JackParser.ExpressionContext,0)


        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.StatementsContext)
            else:
                return self.getTypedRuleContext(JackParser.StatementsContext,i)

